# Panorama

./: CMakeLists.txt  readme.md  run.sh
image/: Thumbs.db
src/: Panorama.cpp  Panorama.h  cropper.cpp  cropper.h  main.cpp
